--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/bq-to-ftp:$TAG_NAME', '.' , '-f', 'Dockerfile']
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/bq-to-ftp', '.' , '-f', 'Dockerfile']
   # push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/bq-to-ftp:$TAG_NAME']
+    args: ['push', 'gcr.io/$PROJECT_ID/bq-to-ftp']
 images:
-  - 'gcr.io/$PROJECT_ID/bq-to-ftp:$TAG_NAME'
+  - 'gcr.io/$PROJECT_ID/bq-to-ftp'
